build/apps/cadvisor/base/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cadvisor
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    external-dns.alpha.kubernetes.io/target: monitoring.anotherlife.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: cadvisor
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cadvisor.monitoring.anotherlife.pl`)
      middlewares:
        - name: chain-traefik-dashboard
          namespace: traefik
      services:
        - kind: TraefikService
          name: cadvisor
          port: 8080
  tls:
    domains:
      - main: monitoring.anotherlife.pl
        sans:
          - .monitoring.anotherlife.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-monitoring
